<!--
  ~ MIT License
  ~ Copyright (c) 2017. Attiq ur Rehman
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished
  ~ to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED
  ~ "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
  ~ OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM,OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="app_name">Zindagi Blood Donate</string>
    <string name="title_activity_temp_map">Map</string>
    <string name="app_shared_prefs">ZINDGI_SHARED_PREFS</string>
    <string name="error">Error</string>
    <string name="module_login">Login Module</string>
    <string name="module_home">Home Module</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="server_not_responding">Server Not Responding</string>
    <string name="helvetica_normal">Helvetica.ttf</string>
    <string name="helvetica_bold">HelveticaBold.ttf</string>
    <string name="helvetica_light">HelveticaLight.ttf</string>
    <string name="typeface_not_found" translatable="false">Typeface %s not found, or could not be loaded. Showing default typeface.</string>
    <string name="assets_fonts_folder" translatable="false">fonts/</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_not_valid">Password not valid</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="failed_to_logged_in">Failed to logged in</string>
    <string name="save">Save</string>
    <string name="ta_da">TA/DA</string>
    <string name="request_blood">Request Blood</string>
    <string name="language">Language</string>
    <string name="submit">Submit</string>
    <string name="location_text">Location</string>
    <string name="close_app">Close App</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="saving_detail">Saving Detail</string>
    <string name="loading_user_information">Loading User Information</string>
    <string name="please_wait">Please wait</string>
    <string name="fetching_language">Fetching Language</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_hint">enter email address</string>
    <string name="password_hint">type your password here</string>
    <string name="signing_in">Signing in</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="check_in">Check In</string>
    <string name="member_id">Member ID:</string>
    <string name="valid_till">Valid till:</string>
    <string name="virtual_card">Virtual Card</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="cell_number">Cell Number</string>
    <string name="enter_cell_number">Enter Cell Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="agreement">By joining, you agree to our terms and privacy</string>
    <string name="welcome">Welcome,</string>
    <string name="nic">CNIC#</string>
    <string name="enter_nic">CNIC#</string>
    <string name="verify_eligibility">Verify Eligibility</string>
    <string name="preferred_duration">Preferred Duration</string>
    <string name="enter_preferred_duration">Preferred Duration</string>
    <string name="added_by">Added by</string>
    <string name="verified_by">Verified by</string>
    <string name="is_on_break">Is on break?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="do_you_want_to_block_this_user">Do you want to block this user?</string>
    <string name="do_you_want_to_unblock_this_user">Do you want to unblock this user?</string>

    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_request_blood">Blood</string>
    <string name="confirm">Please Confirm</string>
    <string name="is_activated">Is activated?</string>
    <string name="title_admin">Admin</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="searchHospital">Search Hospital</string>
    <string name="no_of_bottles">No. of bottles</string>
    <string name="notifying_backend_server">Notifying backend server</string>
    <string name="age_group">Age Group</string>
    <string name="enter_hospital_name">Enter hospital name or Place</string>

</resources>
