<?xml version="1.0" encoding="utf-8" ?><!--
  ~ MIT License
  ~ Copyright (c) 2017. Attiq ur Rehman
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the
  ~ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished
  ~ to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED
  ~ "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
  ~ OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM,OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.zindagi.blood.donate.base.view.AnyTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/field_height"
                android:layout_marginLeft="@dimen/x5"
                android:layout_marginStart="@dimen/x5"
                android:layout_weight="1"
                android:text="@string/blood_group"
                android:textSize="@dimen/s11" />

            <Spinner
                android:id="@+id/spinner_blood_group"
                android:layout_width="0dp"
                android:layout_height="@dimen/field_height"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zindagi.blood.donate.base.view.AnyTextView
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginStart="@dimen/x5"
            android:layout_weight="1"
            android:text="@string/age_group"
            android:textSize="@dimen/s11" />

        <Spinner
            android:id="@+id/spinner_age"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_weight="2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zindagi.blood.donate.base.view.AnyTextView
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginStart="@dimen/x5"
            android:layout_weight="1"
            android:text="@string/ta_da"
            android:textSize="@dimen/s11" />

        <Spinner
            android:id="@+id/spinner_ta"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_weight="2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zindagi.blood.donate.base.view.AnyTextView
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginStart="@dimen/x5"
            android:layout_weight="1"
            android:text="@string/no_of_bottles"
            android:textSize="@dimen/s11" />

        <Spinner
            android:id="@+id/spinner_no_bottles"
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:layout_weight="2" />
    </LinearLayout>

    <com.zindagi.blood.donate.base.view.AnyAutoCompleteTextView
        android:id="@+id/searchHospital"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginEnd="@dimen/x5"
        android:layout_marginStart="@dimen/x5"
        android:hint="@string/enter_hospital_name"
        android:imeOptions="flagNoExtractUi|actionSearch"
        android:inputType="textAutoComplete"
        android:lines="1"
        android:paddingEnd="@dimen/x5"
        android:paddingStart="@dimen/x5"
        android:popupBackground="@drawable/border_dropdown" />

    <Button
        android:id="@+id/button_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/x15"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:layout_marginStart="@dimen/x15"
        android:layout_marginTop="@dimen/x10"
        android:layout_weight="0"
        android:background="@color/app_widget_color"
        android:paddingLeft="@dimen/x18"
        android:paddingRight="@dimen/x18"
        android:text="@string/request_blood"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
